# uptop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SENTRY_LOG_LEVELS.md  SENTRY_TROUBLESHOOTING.md  SPECIFICATION.md  Taskfile.yml  mkdocs.yml  pyproject.toml  test-sentry.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
secrets/: .gitignore  example.env
src/uptop/: __init__.py  __main__.py  cli.py  cli_runner.py  sentry.py
src/uptop/collectors/: __init__.py  base.py  buffer.py  scheduler.py
src/uptop/config/: __init__.py  defaults.py  loader.py
src/uptop/formatters/: __init__.py  json_formatter.py  prometheus.py
src/uptop/models/: __init__.py  base.py
src/uptop/performance/: __init__.py  cache.py  profiler.py
src/uptop/plugin_api/: __init__.py  base.py
src/uptop/plugins/: __init__.py  cpu.py  disk.py  lazy_loader.py  memory.py  network.py  processes.py  registry.py
src/uptop/tui/: __init__.py  app.py  messages.py
src/uptop/tui/layouts/: __init__.py  grid.py
src/uptop/tui/panes/: __init__.py  cpu_widget.py  disk_widget.py  memory_widget.py  network_widget.py  process_widget.py
src/uptop/tui/screens/: __init__.py  confirm_kill.py  filter.py  help.py  loading.py
src/uptop/tui/themes/: __init__.py  base.py  dark.py  gruvbox.py  light.py  nord.py  solarized.py
src/uptop/tui/widgets/: __init__.py  pane_container.py  sparkline.py
tests/: __init__.py  test_cli.py  test_cli_modes.py  test_collectors.py  test_config.py  test_cpu_pane.py  test_cpu_widget.py  test_disk_pane.py  test_disk_widget.py  test_display_mode.py  test_error_handling.py  test_grid_layout.py  test_json_formatter.py  test_memory_pane.py  test_memory_widget.py  test_models.py  test_mouse_support.py  test_network_pane.py  test_network_widget.py  test_pane_container.py  test_performance.py  test_plugin_api.py  test_process_keybindings.py  test_process_pane.py  test_process_widget.py  test_prometheus_formatter.py  test_registry.py  test_sparkline.py  test_themes.py  test_tui_app.py  test_ux_polish.py  test_version.py
